testsuite/poke.pkl/try-catch-diag-3.pkl
/* { dg-do compile } */

defun foo = (Exception e) int:
  {
   try
     raise e;
   catch if "foo" /* { dg-error "" } */
   {
     print ("catched\n");
   }

   return 0;
  }

defun bar = (Exception e) int:
  {
   try
     return foo (e);
   catch
   {
     print ("uncatched\n");
   }

   return 0;
  }
